sql/test/unit/checks/fail_select_from_table.exp
1
1
create table if not exists test(x integer);
delete from test;
insert into test values (0), (1), (2);
select check(x < 2) from test;
^
|
 ----- ERROR
Error: line 4, character 0:
Constraint failed
